Deltatime implemented on an ApplicationHelper.h. Not passed as parameter in update because it will need us to create a more structured code which it would take some time now. Deltatime accessible at any moment from the static class.

--- a/NetworkingSocketGmae.vcxproj.filters
+++ b/NetworkingSocketGmae.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="Source\Private\Map.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Public\ApplicationHelper.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Public\Window.h">
@@ -60,6 +63,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Source\Public\Map.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Public\ApplicationHelper.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
