--- a/NetworkingSocketGmae.vcxproj
+++ b/NetworkingSocketGmae.vcxproj
@@ -197,6 +197,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Source\Private\AppManager.cpp" />
     <ClCompile Include="Source\Private\GameManager.cpp" />
     <ClCompile Include="Source\Private\Map.cpp" />
     <ClCompile Include="Source\Private\Player.cpp" />
@@ -209,6 +210,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Public\ApplicationHelper.h" />
+    <ClInclude Include="Source\Public\AppManager.h" />
     <ClInclude Include="Source\Public\GameManager.h" />
     <ClInclude Include="Source\Public\Map.h" />
     <ClInclude Include="Source\Public\NetworkingManager.h" />
