--- a/NetworkingSocketGmae.vcxproj
+++ b/NetworkingSocketGmae.vcxproj
@@ -199,23 +199,27 @@
   <ItemGroup>
     <ClCompile Include="Source\Private\AppManager.cpp" />
     <ClCompile Include="Source\Private\GameManager.cpp" />
+    <ClCompile Include="Source\Private\Input\BoatController.cpp" />
+    <ClCompile Include="Source\Private\Input\PlayerController.cpp" />
     <ClCompile Include="Source\Private\Map.cpp" />
     <ClCompile Include="Source\Private\Player.cpp" />
     <ClCompile Include="Source\Private\main.cpp" />
-    <ClCompile Include="Source\Private\NetworkingManager.cpp" />
-    <ClCompile Include="Source\Private\NetWorkingManagerClient.cpp" />
-    <ClCompile Include="Source\Private\NetworkingManagerServer.cpp" />
+    <ClCompile Include="Source\Private\Networking\NetworkingManager.cpp" />
+    <ClCompile Include="Source\Private\Networking\NetWorkingManagerClient.cpp" />
+    <ClCompile Include="Source\Private\Networking\NetworkingManagerServer.cpp" />
     <ClCompile Include="Source\Private\Window.cpp" />
     <ClCompile Include="Source\Private\ApplicationHelper.cpp" />
+    <ClCompile Include="Source\Public\Input\BoatController.h" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Public\ApplicationHelper.h" />
     <ClInclude Include="Source\Public\AppManager.h" />
     <ClInclude Include="Source\Public\GameManager.h" />
+    <ClInclude Include="Source\Public\Input\PlayerController.h" />
     <ClInclude Include="Source\Public\Map.h" />
-    <ClInclude Include="Source\Public\NetworkingManager.h" />
-    <ClInclude Include="Source\Public\NetworkingManagerClient.h" />
-    <ClInclude Include="Source\Public\NetworkingManagerServer.h" />
+    <ClInclude Include="Source\Public\Networking\NetworkingManager.h" />
+    <ClInclude Include="Source\Public\Networking\NetworkingManagerClient.h" />
+    <ClInclude Include="Source\Public\Networking\NetworkingManagerServer.h" />
     <ClInclude Include="Source\Public\Player.h" />
     <ClInclude Include="Source\Public\Window.h" />
   </ItemGroup>
