--- a/NetworkingSocketGmae.vcxproj
+++ b/NetworkingSocketGmae.vcxproj
@@ -213,6 +213,7 @@
     <ClCompile Include="Source\Private\Window.cpp" />
     <ClCompile Include="Source\Private\ApplicationHelper.cpp" />
     <ClCompile Include="Source\Public\Input\BoatController.h" />
+    <ClCompile Include="Source\Private\RPC\RPC.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Public\ApplicationHelper.h" />
@@ -228,6 +229,7 @@
     <ClInclude Include="Source\Public\Managers\Networking\NetworkingManagerServer.h" />
     <ClInclude Include="Source\Public\Player\Boat.h" />
     <ClInclude Include="Source\Public\Player\Player.h" />
+    <ClInclude Include="Source\Public\RPC\RPC.h" />
     <ClInclude Include="Source\Public\Window.h" />
   </ItemGroup>
   <ItemGroup>
