Bullet spawns and moves on the server. Replication needs to be done.

--- a/NetworkingSocketGmae.vcxproj.filters
+++ b/NetworkingSocketGmae.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="Source\Private\GameObjects\GameObject.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Private\GameObjects\BoatBullet.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Public\Window.h">
@@ -108,6 +111,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Source\Public\GameObjects\GameObject.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Public\GameObjects\BoatBullet.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
