Sound Manager added to the project. Also sound added to the boat when shooting.

--- a/NetworkingSocketGmae.vcxproj
+++ b/NetworkingSocketGmae.vcxproj
@@ -202,6 +202,7 @@
     <ClCompile Include="Source\Private\Managers\AppManager.cpp" />
     <ClCompile Include="Source\Private\Managers\GameManager.cpp" />
     <ClCompile Include="Source\Private\Input\BoatController.cpp" />
+    <ClCompile Include="Source\Private\Managers\SoundManager.cpp" />
     <ClCompile Include="Source\Private\Managers\TextureManager.cpp" />
     <ClCompile Include="Source\Private\Map\Lake.cpp" />
     <ClCompile Include="Source\Private\Map\Map.cpp" />
@@ -223,6 +224,7 @@
     <ClInclude Include="Source\Public\Input\InputManager.h" />
     <ClInclude Include="Source\Public\Managers\AppManager.h" />
     <ClInclude Include="Source\Public\Managers\GameManager.h" />
+    <ClInclude Include="Source\Public\Managers\SoundManager.h" />
     <ClInclude Include="Source\Public\Managers\TextureManager.h" />
     <ClInclude Include="Source\Public\Map\Lake.h" />
     <ClInclude Include="Source\Public\Map\Map.h" />
