--- a/NetworkingSocketGmae.vcxproj.filters
+++ b/NetworkingSocketGmae.vcxproj.filters
@@ -66,7 +66,7 @@
     <ClCompile Include="Source\Private\GameObjects\GameObject.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Source\Private\GameObjects\BoatBullet.cpp">
+    <ClCompile Include="Source\Private\GameObjects\Bullet.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Source\Private\Managers\SoundManager.cpp">
@@ -116,7 +116,7 @@
     <ClInclude Include="Source\Public\GameObjects\GameObject.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Source\Public\GameObjects\BoatBullet.h">
+    <ClInclude Include="Source\Public\GameObjects\Bullet.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Source\Public\Managers\SoundManager.h">
@@ -127,5 +127,13 @@
     <Image Include="Art\Background\Water.jpg">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="Art\bullet.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
+  <ItemGroup>
+    <Media Include="Sound\Boat\blaster.wav">
+      <Filter>Resource Files</Filter>
+    </Media>
   </ItemGroup>
 </Project>
