Collision system done. Managed in the Map base class as it has a reference for all the level game objects.
The collision system checks and triggers 3 function from the game objects:

//Triggered when a collision is detected with another game object
virtual void  OnCollisionEnter(GameObject* otherGO);

//Triggered when a collision is colliding with another game object
virtual void  OnColliding(GameObject* otherGO);

//Triggered when a collision finished collising with another game object
virtual void  OnCollissionExit(GameObject* otherGO);

override on a child class to add colliding functionality.

--- a/NetworkingSocketGmae.vcxproj
+++ b/NetworkingSocketGmae.vcxproj
@@ -217,12 +217,13 @@
     <ClCompile Include="Source\Private\Managers\Networking\NetworkingManagerServer.cpp" />
     <ClCompile Include="Source\Private\Window.cpp" />
     <ClCompile Include="Source\Private\ApplicationHelper.cpp" />
-    <ClCompile Include="Source\Public\GameObjects\BoatLifes.h" />
-    <ClCompile Include="Source\Public\Input\BoatController.h" />
-    <ClCompile Include="Source\Public\Managers\FontManager.h" />
+    <ClInclude Include="Source\Public\GameObjects\BoatLifes.h" />
+    <ClInclude Include="Source\Public\Input\BoatController.h" />
+    <ClInclude Include="Source\Public\Managers\FontManager.h" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Public\ApplicationHelper.h" />
+    <ClInclude Include="Source\Public\CollisionChannel\CollisionChannels.h" />
     <ClInclude Include="Source\Public\GameObjects\Bullet.h" />
     <ClInclude Include="Source\Public\GameObjects\GameObject.h" />
     <ClInclude Include="Source\Public\Input\InputManager.h" />
